syntax = "proto3";
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative exampb/exam.proto

package exam;
option go_package = "github.com/Edigiraldo/grpc/exampb;exampb";

message Exam {
	string id = 1;
	string name = 2;
}

message Question {
	string id = 1;
	string answer = 2;
	string question = 3;
	string exam_id = 4;
}

message GetExamRequest {
	string id = 1;
}

message SetExamResponse {
	string id = 1;
	string name = 2;
}

message SetQuestionsResponse {
	bool ok = 1;
}

service ExamService {
	rpc GetExam(GetExamRequest) returns (Exam);
	rpc SetExam(Exam) returns (SetExamResponse);
	rpc SetQuestions(stream Question) returns (SetQuestionsResponse);
}


